--- a/2.4_c2017_master_cleaning_soph.Rmd
+++ b/2.4_c2017_master_cleaning_soph.Rmd
@@ -299,6 +299,21 @@ d_f_race %>%
   noquote
 ```
 
+# Started Sophomore Survey
+
+```{r}
+check_vars_by_keywords(d1, c("start"))
+
+d2 <- d1 %>% filter(!is.na(t5StartDate))
+d1 %<>% 
+  mutate(
+    startedSOPH = ifelse(!is.na(t5StartDate), 1, 0)
+  )
+
+d1 %>% count(startedSOPH)
+```
+
+
 # Export dataset
 ```{r}
 d1 %>% write_rds("../Newest Data/FIntv_2017_Comprehensive_withY1SpGradeData_withSYFUSNoT7_Cleaned_Demogs_Frosh_Soph.rds")
